Fix inputs spilling over modal in iOS

--- a/src/index.css
+++ b/src/index.css
@@ -726,11 +726,11 @@ h1 {
 }
 
 .edit-subject {
-  width: 59vw;
+  width: 57vw;
 }
 
 .message {
-  width: 59vw;
+  width: 57vw;
 }
 
 .message-title {
@@ -738,11 +738,11 @@ h1 {
 }
 
 #recipient-name {
-  width: 59vw;
+  width: 57vw;
 }
 
 #sender-name {
-  width: 59vw;
+  width: 57vw;
 }
 
 /*
